[project]
name = "sentinel007_agent"
version = "0.0.2"
description = ""
authors = [
    {name = "Aditya Ramesh",email = "aditrame@cisco.com"},
    {name = "Akanksha Joshi",email = "akanjosh@cisco.com"},
    {name = "Anusha Suresh",email = "anusuresh@cisco.com"},
    {name = "Mohamed Elidrisi",email = "melidris@cisco.com"},
    {name = "Sindhu Narasarama Rao",email = "snarasar@cisco.com"},
    {name = "Sree Gowri Addepalli",email = "sreeadde@cisco.com"},
    {name = "Suresh Yekasiri",email = "syekasir@cisco.com"}
]
readme = "README.md"
requires-python =  ">=3.9.0,<4.0"
dynamic = [ "dependencies" ]

[tool.poetry.dependencies]
python-dotenv = "^1.0.1"
langgraph = "^0.3.5"
langchain-openai = "^0.3.8"
langchain = "^0.3.20"
agntcy-acp = "1.1.2"


[tool.poetry]
packages = [{include = "sentinel007_agent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
